feat(Frontend, Docker): Add frontend code and enhance readme

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "todo-app",
+  "name": "todo-app-backend",
   "main": "server.ts",
   "engines": {
     "node": "20.x"
   },
   "scripts": {
     "build:watch": "tsc -w",
-    "start": "concurrently \"npm run build:watch\" \"nodemon --watch ./src/docs/swagger.yaml --ext ts,yaml ./build/server.js\"",
+    "start": "concurrently \"npm run build:watch\" \"wait-on ./build/server.js && nodemon --watch ./src/docs/swagger.yaml --ext ts,yaml ./build/server.js\"",
     "lint:fix": "eslint './src/**/*.ts' --fix",
     "test:watch": "NODE_ENV=test jest --watchAll"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "js-yaml": "^4.1.0",
     "pg": "^8.11.2",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "wait-on": "^7.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
